kustody/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go-clusterip
  labels:
    app.kubernetes.io/name: back-go
spec:
  selector:
    app.kubernetes.io/name: back-go
  ports:
  - port: 8111
    name: http
